--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-solicitud-novedad-contractual/components/form-registrar-novedad-contrato/form-registrar-novedad-contrato.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-solicitud-novedad-contractual/components/form-registrar-novedad-contrato/form-registrar-novedad-contrato.component.html
@@ -853,6 +853,7 @@
                   formControlName="numeroRadicadoSolicitud"
                   #numeroRadicadoSolicitud
                   maxlength="20"
+                  required
                 />
               </mat-form-field>
               <span
