--- a/asivamosffie.web/asivamosffie/src/app/_pages/verificar-solicitud-de-novedades/components/form-registrar-novedad-accord/form-registrar-novedad-accord.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/verificar-solicitud-de-novedades/components/form-registrar-novedad-accord/form-registrar-novedad-accord.component.html
@@ -471,7 +471,7 @@
             <div class="col d-flex">
               <mat-form-field class="full-width">
                 <input matInput type="text" formControlName="numeroRadicadoSolicitud" #numeroRadicadoSolicitud
-                  maxlength="20">
+                  maxlength="20" required>
               </mat-form-field>
               <span class="contador" [matTooltipPosition]="'above'" matTooltip="Campo numérico"
                 matTooltipClass="info-tooltip">
