--- a/asivamosffie.web/asivamosffie/src/app/_pages/generar-disponibilidad-presupuestal/components/gestionar-ddp/gestionar-ddp.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/generar-disponibilidad-presupuestal/components/gestionar-ddp/gestionar-ddp.component.html
@@ -215,7 +215,7 @@
                             <p><strong>Valor del aportante al proyecto: </strong>{{apo.valorAportanteAlProyecto| currency:'':'symbol':'3.0'}}</p>
                         <mat-card-title class="header-card--text sub-text textoGris">Fuentes</mat-card-title>
                         <div *ngFor="let fuente of apo.fuentesFinanciacion;index as j">
-                            <section *ngIf="fuente.saldo_actual_de_la_fuente_al_guardar !== 0">
+                            <section>
                             <mat-card-title class="header-card--text sub-text textoGris" >
                                 
                             </mat-card-title>
@@ -226,7 +226,7 @@
                             </p>
                             <p>
                                 <strong>Saldo actual de la fuente:</strong>
-                                {{fuente.saldo_actual_de_la_fuente_al_guardar | currency:'':'symbol':'3.0'}}
+                                {{fuente.saldo_actual_de_la_fuente | currency:'':'symbol':'3.0'}}
                             </p>
                             <p>
                                 <strong>Valor solicitado de la fuente:</strong>
@@ -234,7 +234,7 @@
                             </p>
                             <p>
                                 <strong>Nuevo saldo de la fuente:</strong>
-                                {{fuente.nuevo_saldo_de_la_fuente_al_guardar| currency:'':'symbol':'3.0'}}
+                                {{fuente.nuevo_saldo_de_la_fuente| currency:'':'symbol':'3.0'}}
                             </p>
                             <!-- no esta ene l caso de uso<p>
                                 <strong>Estado de las fuentes:</strong>
