--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-solicitud-novedad-contractual/components/ver-detalle/ver-detalle.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-solicitud-novedad-contractual/components/ver-detalle/ver-detalle.component.html
@@ -146,7 +146,14 @@
 
               <p><strong>Resumen de la justificación de la novedad: </strong></p>
               <section [innerHTML]="descripcion.resumenJustificacion"></section>
-              <mat-card-title class="header-card--text sub-text" *ngIf="descripcion.tipoNovedadCodigo == '4'">
+              <mat-card-title
+                class="header-card--text sub-text"
+                *ngIf="
+                  descripcion.tipoNovedadCodigo == '4' ||
+                  descripcion.tipoNovedadCodigo == '1' ||
+                  descripcion.tipoNovedadCodigo == '2'
+                "
+              >
                 Plazo solicitado
               </mat-card-title>
               <p *ngIf="descripcion.tipoNovedadCodigo == '4'"><strong>plazo Adicional Meses: </strong> {{
