Debug PQT4 V11 :package:

--- a/asivamosffie.web/asivamosffie/src/app/_pages/generar-orden-giro/components/accordion-detalle-giro-gog/accordion-detalle-giro-gog.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/generar-orden-giro/components/accordion-detalle-giro-gog/accordion-detalle-giro-gog.component.html
@@ -44,7 +44,7 @@
                 <app-desc-dir-tecnica-gog   [solicitudPago]="solicitudPago"
                                             [esPreconstruccion]="solicitudPagoFase.esPreconstruccion"
                                             [esVerDetalle]="esVerDetalle"
-                                            (tieneObservacion)="listaSemaforos.semaforoDescuentosDireccionTecnica = 'en-proceso'">
+                                            (tieneObservacion)="solicitudPagoFase.esPreconstruccion === true ? tieneObsDescuentos = true : tieneObsDescuentosConstruccion = true">
                 </app-desc-dir-tecnica-gog>
             </mat-expansion-panel>
         </mat-accordion>
@@ -59,7 +59,7 @@
                 <app-tercero-causacion-gog  [solicitudPago]="solicitudPago"
                                             [esVerDetalle]="esVerDetalle"
                                             [esPreconstruccion]="solicitudPagoFase.esPreconstruccion"
-                                            (tieneObservacion)="listaSemaforos.semaforoTerceroCausacion = 'en-proceso'">
+                                            (tieneObservacion)="solicitudPagoFase.esPreconstruccion === true ? tieneObsTercero = true : tieneObsTerceroConstruccion = true">
                 </app-tercero-causacion-gog>
             </mat-expansion-panel>
         </mat-accordion>
