--- a/asivamosffie.web/asivamosffie/src/app/_pages/generar-orden-giro/components/generar-orden-giro/generar-orden-giro.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/generar-orden-giro/components/generar-orden-giro/generar-orden-giro.component.html
@@ -83,10 +83,7 @@
                             color="accent"
                             class="btn-table"
                             (click)="devolverSolicitud( element, true )"
-                            *ngIf=" element.estadoCodigo === estadoSolicitudPagoOrdenGiro.enProcesoGeneracion
-                                    || element.estadoCodigo === estadoSolicitudPagoOrdenGiro.ordenGiroDevueltaPorVerificacion
-                                    || element.estadoCodigo === estadoSolicitudPagoOrdenGiro.ordenGiroDevueltaPorAprobacion
-                                    || element.estadoCodigo === estadoSolicitudPagoOrdenGiro.ordenGiroDevueltaPorTramiteFiduciario">
+                            *ngIf=" element.estadoCodigo === estadoSolicitudPagoOrdenGiro.ordenGiroDevueltaPorTramiteFiduciario">
                             Anular orden de giro
                     </button>
 
