--- a/asivamosffie.web/asivamosffie/src/app/_pages/generar-orden-giro/components/form-generar-orden-giro/form-generar-orden-giro.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/generar-orden-giro/components/form-generar-orden-giro/form-generar-orden-giro.component.html
@@ -59,14 +59,14 @@
 
         <mat-expansion-panel class="expansion-style">
             <mat-expansion-panel-header class="expansion-style--header">
-                <mat-panel-title class="expansion-style--title" [ngClass]="esVerDetalle === false ?semaforoDetalle : ''">
+                <mat-panel-title class="expansion-style--title" [ngClass]="esVerDetalle === false ? semaforoDetalle : ''">
                     Detalle del giro
                 </mat-panel-title>
             </mat-expansion-panel-header>
 
             <app-accordion-detalle-giro-gog [solicitudPago]="solicitudPago"
                                             [esVerDetalle]="esVerDetalle"
-                                            (estadoSemaforo)="semaforoDetalle = $event">
+                                            (estadoSemaforo)="checkSemaforoDetalle( $event )">
             </app-accordion-detalle-giro-gog>
         </mat-expansion-panel>
     </mat-accordion>
