--- a/asivamosffie.web/asivamosffie/src/app/_pages/verificar-orden-giro/components/detalle-giro/detalle-giro.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/verificar-orden-giro/components/detalle-giro/detalle-giro.component.html
@@ -214,33 +214,37 @@
         </ng-template>
     </mat-expansion-panel>
 
-    <mat-expansion-panel class="expansion-style sub-expansion" *ngIf="tieneDireccionTecnica === true">
-        <mat-expansion-panel-header class="expansion-style--header">
-            <mat-panel-title class="expansion-style--title" [ngClass]="esVerDetalle === true ? '' : listaSemaforos.semaforoDireccionTecnica">
-                Descuentos Dirección Técnica
-            </mat-panel-title>
-        </mat-expansion-panel-header>
-
-        <app-descuentos-direccion-tecnica   [esVerDetalle]="esVerDetalle"
-                                            [esRegistroNuevo]="esRegistroNuevo"
-                                            [solicitudPago]="solicitudPago"
-                                            (estadoSemaforo)="listaSemaforos.semaforoDireccionTecnica = $event">
-        </app-descuentos-direccion-tecnica>
-    </mat-expansion-panel>
-
-    <mat-expansion-panel class="expansion-style sub-expansion">
-        <mat-expansion-panel-header class="expansion-style--header">
-            <mat-panel-title class="expansion-style--title" [ngClass]="esVerDetalle === true ? '' : listaSemaforos.semaforoTerceroCausacion">
-                Tercero de causación
-            </mat-panel-title>
-        </mat-expansion-panel-header>
-
-        <app-tercero-causacion  [esVerDetalle]="esVerDetalle"
-                                [esRegistroNuevo]="esRegistroNuevo"
-                                [solicitudPago]="solicitudPago"
-                                (estadoSemaforo)="listaSemaforos.semaforoTerceroCausacion = $event">
-        </app-tercero-causacion>
-    </mat-expansion-panel>
+    <div *ngFor="let solicitudPagoFase of solicitudPago.solicitudPagoRegistrarSolicitudPago[ 0 ].solicitudPagoFase; index as i">
+        <mat-expansion-panel class="expansion-style sub-expansion" *ngIf="tieneDireccionTecnica === true">
+            <mat-expansion-panel-header class="expansion-style--header">
+                <mat-panel-title class="expansion-style--title" [ngClass]="esVerDetalle === true ? '' : listaSemaforos.semaforoDireccionTecnica">
+                    Descuentos Dirección Técnica - {{ solicitudPagoFase.esPreconstruccion === true ? 'Fase 1' : 'Fase 2' }}
+                </mat-panel-title>
+            </mat-expansion-panel-header>
+    
+            <app-descuentos-direccion-tecnica   [esVerDetalle]="esVerDetalle"
+                                                [esRegistroNuevo]="esRegistroNuevo"
+                                                [solicitudPago]="solicitudPago"
+                                                [esPreconstruccion]="solicitudPagoFase.esPreconstruccion"
+                                                (estadoSemaforo)="listaSemaforos.semaforoDireccionTecnica = $event">
+            </app-descuentos-direccion-tecnica>
+        </mat-expansion-panel>
+    
+        <mat-expansion-panel class="expansion-style sub-expansion">
+            <mat-expansion-panel-header class="expansion-style--header">
+                <mat-panel-title class="expansion-style--title" [ngClass]="esVerDetalle === true ? '' : listaSemaforos.semaforoTerceroCausacion">
+                    Tercero de causación  - {{ solicitudPagoFase.esPreconstruccion === true ? 'Fase 1' : 'Fase 2' }}
+                </mat-panel-title>
+            </mat-expansion-panel-header>
+    
+            <app-tercero-causacion  [esVerDetalle]="esVerDetalle"
+                                    [esRegistroNuevo]="esRegistroNuevo"
+                                    [solicitudPago]="solicitudPago"
+                                    [esPreconstruccion]="solicitudPagoFase.esPreconstruccion"
+                                    (estadoSemaforo)="listaSemaforos.semaforoTerceroCausacion = $event">
+            </app-tercero-causacion>
+        </mat-expansion-panel>
+    </div>
 
     <mat-expansion-panel class="expansion-style sub-expansion">
         <mat-expansion-panel-header class="expansion-style--header">
