--- a/asivamosffie.web/asivamosffie/src/app/_pages/generar-orden-giro/components/dialog-devolver-sol-pago-gog/dialog-devolver-sol-pago-gog.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/generar-orden-giro/components/dialog-devolver-sol-pago-gog/dialog-devolver-sol-pago-gog.component.html
@@ -11,6 +11,40 @@
             <span>Número de contrato: <b> {{ registro.registro.numeroContrato }} </b></span>
         </p>
     </div>
+
+    <div class="row" style="padding-left: 2.7em;" *ngIf="this.registro.esAnular === false">
+        <div class="col-md-8">
+            <div class="row">
+                <div class="pr-1">
+                    <label  class="label-left textoGris"
+                            for="usuarioADevolver"
+                            [ngClass]="{ 'color-secondaryColor': (addressForm.get('usuarioADevolver').invalid && addressForm.get('usuarioADevolver').touched) || (addressForm.get('usuarioADevolver').invalid && estaEditando) }">
+                            Funcionalidad a devolver
+                    </label>
+                </div>
+                <div class="col">
+                    <mat-form-field class="select-width">
+                        <mat-select formControlName="usuarioADevolver" required>
+                            <mat-option *ngFor="let devolucion of listaDevoluciones" [value]="devolucion.codigo">
+                                {{ devolucion.nombre }}
+                            </mat-option>
+                        </mat-select>
+                    </mat-form-field>
+                </div>
+                <span class="icon-incompleto">
+                    <img
+                      class="icon-incompleto--img"
+                      src="assets/img/icon/incompleto.svg"
+                      alt="este campo es requerido"
+                      [matTooltipPosition]="'above'"
+                      matTooltip="Debe ingresar la información en el campo para continuar"
+                      matTooltipClass="info-tooltip"
+                      *ngIf="(addressForm.get('usuarioADevolver').invalid && addressForm.get('usuarioADevolver').touched) || (addressForm.get('usuarioADevolver').invalid && estaEditando)">
+                  </span>
+            </div>
+        </div>
+    </div>
+
     <div class="d-flex align-items-center mt-2em">
         <div    class="text-area-quill izqTitle"
                 [ngClass]="{ 'color-secondaryColor': (addressForm.get('observaciones').invalid && addressForm.get('observaciones').touched) || (addressForm.get('observaciones').invalid && estaEditando) }">
@@ -42,7 +76,7 @@
                     matTooltip="Debe ingresar la información en el campo para continuar"
                     matTooltipClass="info-tooltip"
                     *ngIf="(addressForm.get('observaciones').invalid && addressForm.get('observaciones').touched) || (addressForm.get('observaciones').invalid && estaEditando)">
-          </span>
+        </span>
     </div>
     <div class="text-center mb-2em">
         <button mat-button
