--- a/asivamosffie.web/asivamosffie/src/app/_pages/tramitar-orden-giro/components/form-tramitar-orden-giro/form-tramitar-orden-giro.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/tramitar-orden-giro/components/form-tramitar-orden-giro/form-tramitar-orden-giro.component.html
@@ -56,7 +56,7 @@
             <app-detalle-giro   [esRegistroNuevo]="esRegistroNuevo"
                                 [esVerDetalle]="esVerDetalle"
                                 [solicitudPago]="solicitudPago"
-                                (estadoSemaforo)="semaforoDetalleGiro = $event">
+                                (estadoSemaforo)="checkSemaforoDetalle( $event )">
             </app-detalle-giro>
         </mat-expansion-panel>
     </mat-accordion>
