--- a/asivamosffie.web/asivamosffie/src/app/_pages/tramitar-orden-giro/components/tabla-aportantes/tabla-aportantes.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/tramitar-orden-giro/components/tabla-aportantes/tabla-aportantes.component.html
@@ -28,7 +28,7 @@
           <th mat-header-cell *matHeaderCellDef mat-sort-header class="back-color" style="width: 15%;"> Valor de uso </th>
           <td mat-cell *matCellDef="let element" align="center" class="color-text" class="padding-0em border-color-detalle">
             <div class="sub-item-table flex-table justify-content-center align-items-center h-3em color-text" *ngFor="let valorUso of element.valorUso">
-              ${{ valorUso.valor }}
+              ${{ valorUso }}
             </div>
           </td>
         </ng-container>
@@ -37,7 +37,7 @@
           <th mat-header-cell *matHeaderCellDef mat-sort-header class="w-20 back-color" style="width: 28%;"> Saldo actual de uso </th>
           <td mat-cell *matCellDef="let element" align="center" class="color-text" class="padding-0em border-color-detalle">
             <div class="sub-item-table flex-table justify-content-center align-items-center h-3em color-text" *ngFor="let saldoActualUso of element.saldoActualUso">
-              ${{ saldoActualUso.valor }}
+              ${{ saldoActualUso }}
             </div>
           </td>
         </ng-container>
