ajustes verificar novedad

--- a/asivamosffie.web/asivamosffie/src/app/_pages/verificar-solicitud-de-novedades/components/expansion-panel-interventoria/expansion-panel-interventoria.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/verificar-solicitud-de-novedades/components/expansion-panel-interventoria/expansion-panel-interventoria.component.html
@@ -18,7 +18,9 @@
     <app-form-registrar-novedad #formRegistrarNovedad
                                 [proyecto]=proyecto
                                 [contrato]=contrato
-                                [novedad]=novedad>
+                                [novedad]=novedad
+                                (guardar)="cargarRegistro()"
+                                >
     </app-form-registrar-novedad>
 
   </mat-expansion-panel>
