--- a/asivamosffie.web/asivamosffie/src/app/_pages/verificar-solicitud-de-novedades/components/registrar-solicitud-interventoria/registrar-solicitud-interventoria.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/verificar-solicitud-de-novedades/components/registrar-solicitud-interventoria/registrar-solicitud-interventoria.component.html
@@ -154,7 +154,9 @@
     <app-expansion-panel-interventoria
                                       [proyecto]=proyecto
                                       [contrato]=contrato
-                                      [novedad]=novedad>
+                                      [novedad]=novedad
+                                      (guardar)="ngOnInit()"
+                                      >
   </app-expansion-panel-interventoria>
   </div>
 
