--- a/asivamosffie.web/asivamosffie/src/app/_pages/verificar-solicitud-de-novedades/components/form-registrar-novedad/form-registrar-novedad.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/verificar-solicitud-de-novedades/components/form-registrar-novedad/form-registrar-novedad.component.html
@@ -48,7 +48,7 @@
           </div>
         </div>
       </div>
-      <div class="row"> 
+      <div class="row" *ngIf="addressForm.get('instanciaPresentoSolicitud').value !== '3'"> 
         <div class="col-md-8">
           <div class="row">
             <div class="pr-1">
