--- a/asivamosffie.web/asivamosffie/src/app/_pages/verificar-solicitud-de-novedades/components/tabla-solicitud-novedad-contractual/tabla-solicitud-novedad-contractual.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/verificar-solicitud-de-novedades/components/tabla-solicitud-novedad-contractual/tabla-solicitud-novedad-contractual.component.html
@@ -34,7 +34,8 @@
       <th mat-header-cell *matHeaderCellDef mat-sort-header>Estado de la novedad</th>
       <td mat-cell *matCellDef="let element">
         <span *ngIf="element.estadoCodigo === '9'">Con novedad rechazada por apoyo</span>
-        <span *ngIf="element.estadoCodigo !== '9'">{{element.estadoDescripcion}}</span>
+        <span *ngIf="element.estadoCodigo === '10' ">{{element.estadoCodigoNombre}}</span>
+        <span *ngIf="element.estadoCodigo !== '9' && element.estadoCodigo !== '10' ">{{element.estadoDescripcion}}</span>
       </td>
     </ng-container>
 
