--- a/asivamosffie.web/asivamosffie/src/app/_pages/verificar-solicitud-de-novedades/components/tabla-solicitud-novedad-contractual/tabla-solicitud-novedad-contractual.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/verificar-solicitud-de-novedades/components/tabla-solicitud-novedad-contractual/tabla-solicitud-novedad-contractual.component.html
@@ -43,10 +43,18 @@
     <ng-container matColumnDef="registroCompleto">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>Estado del registro</th>
       <td mat-cell *matCellDef="let element">
-        <span class="info-text d-block m-0" 
+        <section *ngIf="element.estadoCodigo !== '2' && element.estadoCodigo !== '3' && element.estadoCodigo !== '18'">
+          <span class="info-text d-block m-0 completo" ></span>
+        Completo
+        </section>
+
+        <section *ngIf="element.estadoCodigo === '2' || element.estadoCodigo === '3' || element.estadoCodigo === '18'">
+          <span class="info-text d-block m-0" 
           [class.sin-diligenciar]="element.registroCompleto !== true"
           [class.completo]="element.registroCompleto === true"></span>
         {{element.registroCompleto === true ? 'Completo' : 'Incompleto'}}
+        </section>
+        
       </td>
     </ng-container>
 
