--- a/asivamosffie.web/asivamosffie/src/app/_pages/generar-orden-giro/components/tabla-porcntj-partic-gog/tabla-porcntj-partic-gog.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/generar-orden-giro/components/tabla-porcntj-partic-gog/tabla-porcntj-partic-gog.component.html
@@ -3,33 +3,30 @@
   
         <ng-container matColumnDef="drp">
           <th mat-header-cell *matHeaderCellDef mat-sort-header class="back-color"> DRP </th>
-          <td mat-cell *matCellDef="let element; index as i" align="center"> <b>{{element.drp}}</b> </td>
+          <td mat-cell *matCellDef="let element; index as i" align="center"> <b>{{ i + 1 }}</b> </td>
         </ng-container>
   
         <ng-container matColumnDef="numeroDRP">
           <th mat-header-cell *matHeaderCellDef mat-sort-header class="w-20 back-color"> Número DRP </th>
-          <td mat-cell *matCellDef="let element; index as i" align="center"> {{element.numeroDRP}} </td>
+          <td mat-cell *matCellDef="let element; index as i" align="center"> {{ element.numeroDrp }} </td>
         </ng-container>
-  
+
         <ng-container matColumnDef="nombreAportante">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header class="back-color"> Nombre del aportante </th>
-          <td mat-cell *matCellDef="let element" align="center" class="color-text" class="padding-0em border-color-detalle">
-            <div class="sub-item-table flex-table justify-content-center align-items-center h-3em color-text"  *ngFor="let el of element.nombreAportante ; let i = index">
-                {{el.nombre }}
-            </div>
-          </td>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header class="w-20 back-color" style="width: 28%;"> Nombre del aportante </th>
+            <td mat-cell *matCellDef="let element" align="center" class="color-text" class="padding-0em border-color-detalle">
+              <div class="sub-item-table flex-table justify-content-center align-items-center h-3em color-text" *ngFor="let listAportantes of element.listAportantes">
+                {{ listAportantes.nombreAportante }}
+              </div>
+            </td>
         </ng-container>
-  
+
         <ng-container matColumnDef="porcParticipacion">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header class="w-20 back-color"> Porcentaje de participación </th>
-          <td mat-cell *matCellDef="let element" align="center" class="color-text" class="padding-0em border-color-detalle">
-            <div class="sub-item-table flex-table justify-content-center align-items-center h-3em color-text" *ngFor="let el of element.porcParticipacion ; let i = index">
-                <!--
-                    {{ el.numero }}
-                -->
-                Pendiente por novedades contractuales
-            </div>
-          </td>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header class="w-20 back-color" style="width: 28%;"> Porcentaje de participación </th>
+            <td mat-cell *matCellDef="let element" align="center" class="color-text" class="padding-0em border-color-detalle">
+              <div class="sub-item-table flex-table justify-content-center align-items-center h-3em color-text" *ngFor="let listAportantes of element.listAportantes">
+                {{ listAportantes.nomTotalParticipacion }}
+              </div>
+            </td>
         </ng-container>
     
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
