--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-novedades-aprobadas/components/tabla-novedades-aprobadas/tabla-novedades-aprobadas.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-novedades-aprobadas/components/tabla-novedades-aprobadas/tabla-novedades-aprobadas.component.html
@@ -57,10 +57,19 @@
         Estado del registro
       </th>
       <td mat-cell *matCellDef="let element">
+      
+      <section *ngIf="element.estadoCodigo !== '10' && element.estadoCodigo !== '11' && element.estadoCodigo !== '17'">
+        <span class="info-text d-block m-0 completo" ></span>
+        Completo
+      </section>
+
+      <section *ngIf="element.estadoCodigo === '11' || element.estadoCodigo === '17' || element.estadoCodigo === '10'">
         <span class="info-text d-block m-0" 
           [class.sin-diligenciar]="element.registroCompletoTramiteNovedades !== true"
           [class.completo]="element.registroCompletoTramiteNovedades === true"></span>
         {{element.registroCompletoTramiteNovedades === true ? 'Completo' : 'Incompleto'}}
+      </section>
+
       </td>
     </ng-container>
 
@@ -94,7 +103,7 @@
                  element.novedadContractual.deseaContinuar === true && 
                  element.registroCompletoTramiteNovedades === true &&
                  element.vaComite === false" >
-          Aprobar técnica y juridicamente
+          Enviar trámite
         
         </button>
         <a mat-button color="warn" mat-raised-button color="accent" class="btn-table" type="button"
