--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-procesos-contractuales/components/form-modificacion-contractual/form-modificacion-contractual.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-procesos-contractuales/components/form-modificacion-contractual/form-modificacion-contractual.component.html
@@ -164,7 +164,7 @@
 
       </mat-expansion-panel>
 
-      <mat-expansion-panel class="expansion-style" *ngIf="estadoCodigo === '9'">
+      <mat-expansion-panel class="expansion-style" *ngIf="estadoCodigo === '24'">
         <mat-expansion-panel-header class="expansion-style--header w-50">
           <mat-panel-title class="expansion-style--title">
             Información del trámite
@@ -174,10 +174,10 @@
         <div align="left">
           <mat-card class="border">
             <mat-card-content>
-              <p><b>Fecha del trámite</b>: 16/06/2020</p>
-              <p><b>Fecha de envío de documentación física para el trámite</b>: 16/06/2020</p>
-              <p><b>Observaciones</b>: Se enviara por medio de mensajeria 472 para que el documento pueda ser radicado este mismo día</p>
-              <p><b>Minuta adjunta</b>: Minuta.doc</p>
+              <p><b>Fecha del trámite</b>: {{ dataNovedad.contrato.contratacion.fechaTramite | date: 'dd/MM/yyyy' }}</p>
+              <p><b>Fecha de envío de documentación física para el trámite</b>: {{ dataNovedad.fechaTramiteGestionar | date: 'dd/MM/yyyy' }}</p>
+              <p><b>Observaciones</b>:<span [innerHTML]="innerObservacion( dataNovedad.observacionGestionar )"></span></p>
+              <p><b>URL con soporte</b>: {{ dataNovedad.urlSoporteGestionar }}</p>
             </mat-card-content>
           </mat-card>
         </div>
@@ -188,7 +188,7 @@
   
   <!--Esta condición estaba. se deja? - *ngIf="estadoCodigo === '2'"-->
 
-  <div class="mt-2em" align="left">
+  <div class="mt-2em" align="left" *ngIf="estadoCodigo === '12'">
     <mat-card class="border">
       <mat-card-title class="text-area-quill--label">Registrar trámite</mat-card-title>
       <mat-card-content class="mt-2em">
