--- a/asivamosffie.web/asivamosffie/src/app/_pages/generar-orden-giro/components/accordion-detalle-giro-gog/accordion-detalle-giro-gog.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/generar-orden-giro/components/accordion-detalle-giro-gog/accordion-detalle-giro-gog.component.html
@@ -18,7 +18,7 @@
                 </mat-panel-title>
             </mat-expansion-panel-header>
 
-            <app-tabla-info-fuenterec-gog></app-tabla-info-fuenterec-gog>
+            <app-tabla-info-fuenterec-gog *ngIf="solicitudPago.tablaInformacionFuenteRecursos !== undefined && solicitudPago.tablaInformacionFuenteRecursos.length > 0" [tablaInformacionFuenteRecursos]="solicitudPago.tablaInformacionFuenteRecursos"></app-tabla-info-fuenterec-gog>
         </mat-expansion-panel>
     </mat-accordion>
     <mat-accordion>
