--- a/asivamosffie.web/asivamosffie/src/app/_pages/generar-orden-giro/components/tabla-info-fuenterec-gog/tabla-info-fuenterec-gog.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/generar-orden-giro/components/tabla-info-fuenterec-gog/tabla-info-fuenterec-gog.component.html
@@ -11,19 +11,16 @@
         <ng-container matColumnDef="saldoActualFRecursos">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Saldo actual fuente de recursos </th>
             <td mat-cell *matCellDef="let element" align="center">
-                {{ element.saldoActualFRecursos }}
+                {{ element.saldoActual | currency:'':'symbol-narrow':'.0-0' }}
             </td>
         </ng-container>
         <ng-container matColumnDef="saldoValorFacturado">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Saldo fuente de recursos afectado
-                por el valor facturado </th>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Saldo fuente de recursos afectado por el valor facturado </th>
             <td mat-cell *matCellDef="let element" align="center">
-                <!-- {{ element.saldoValorFacturado }} -->
-                Pendiente por novedades contractuales
+                {{ element.saldoAfectado | currency:'':'symbol-narrow':'.0-0' }}
             </td>
         </ng-container>
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     </table>
-    <!--<mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>-->
 </div>
