--- a/asivamosffie.web/asivamosffie/src/app/_pages/tramitar-orden-giro/components/detalle-giro/detalle-giro.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/tramitar-orden-giro/components/detalle-giro/detalle-giro.component.html
@@ -64,7 +64,7 @@
           
                 <ng-container matColumnDef="nombre">
                   <th mat-header-cell *matHeaderCellDef mat-sort-header class="back-color"> Nombre del aportante </th>
-                  <td mat-cell *matCellDef="let element" align="center"> {{ element.nombre }} </td>
+                  <td mat-cell *matCellDef="let element" align="center"> {{ element.nombreAportante }} </td>
                 </ng-container>
           
                 <ng-container matColumnDef="fuenteRecursos">
@@ -74,12 +74,12 @@
           
                 <ng-container matColumnDef="saldoActualRecursos">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header class="back-color"> Saldo actual fuente de recursos </th>
-                    <td mat-cell *matCellDef="let element" align="center"> {{ element.saldoActualRecursos | currency: '':'symbol-narrow':'.0-0' }} </td>
+                    <td mat-cell *matCellDef="let element" align="center"> {{ element.saldoActual | currency: '':'symbol-narrow':'.0-0' }} </td>
                 </ng-container>
 
                 <ng-container matColumnDef="saldoValorFacturado">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header class="back-color"> Saldo fuente de recursos afectado por el valor facturado </th>
-                    <td mat-cell *matCellDef="let element" align="center"> <!-- {{ element.saldoValorFacturado | currency: '':'symbol-narrow':'.0-0' }} --> Pendiente por novedades contractuales </td>
+                    <td mat-cell *matCellDef="let element" align="center"> {{ element.saldoAfectado | currency: '':'symbol-narrow':'.0-0' }} </td>
                 </ng-container>
             
                 <tr mat-header-row *matHeaderRowDef="displayedColumnsFuentes"></tr>
